# ocx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/ocx/: ocx.h
src/: common.h  corelib.h  dummy-core.cpp  getopt.cpp  getopt.h  memory.cpp  memory.h  ocx-runner.cpp  test-runner.cpp
